@@ -11,17 +11,23 @@
     eidogoConfig = {
         theme:          "compact", // "standard" or "compact"
         mode:           "play", // "play" or "view"
-        showComments:   true,
-        showPlayerInfo: false,
-        showGameInfo:   false,
-        showTools:      false,
-        showOptions:    false,
-        markCurrent:    true,
-        markVariations: true,
-        markNext:       false,
-        problemMode:    false
+        showComments:    true,
+        showPlayerInfo:  false,
+        showGameInfo:    false,
+        showTools:       false,
+        showOptions:     false,
+        markCurrent:     true,
+        markVariations:  true,
+        markNext:        false,
+        problemMode:     false,
+        enableShortcuts: false
     };
     </script>
+    
+    <!--
+        Optional international support (see player/i18n/ folder)
+    -->
+    <!-- <script type="text/javascript" src="player/i18n/fr.js"></script> -->
     
     <!--
         Necessary script
