@@ -1,0 +1,30 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+    "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title>EidoGo Bare Example</title>
+
+    <style type="text/css">
+    body {
+        margin: 0;
+    }
+    </style>
+
+    <script type="text/javascript" src="player/js/all.compressed.js"></script>
+
+</head>
+<body>
+	
+    <div id="player-container"></div>
+
+    <script type="text/javascript">
+    var player = new eidogo.Player({
+        container:       "player-container",
+        theme:           "compact",
+        sgfUrl:          "sgf/" + (location.search ? location.search.substring(1) : "example.sgf"),
+        enableShortcuts: true
+    });
+    </script>
+    
+</body>
+</html>
