@@ -1,0 +1,23 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+    "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title>EidoGo IFrame Example</title>
+    <style type="text/css">
+    body {
+       background: #ccc;
+    }
+    </style>
+</head>
+<body>
+	
+    <h1>EidoGo Player IFrame Example</h1>
+
+    <iframe src="example_bare.html?blood_vomit.sgf" frameborder=0 width=423 height=533></iframe>
+    
+    <br><br>
+    
+    <textarea rows=5 cols=60>You can type and use arrow keys in this box while still having keyboard shortcuts when the player above has focus.</textarea>
+
+</body>
+</html>
